syntax = "proto3";

package de.unistuttgart.isw.sfsc.patterns;

option java_multiple_files = true;

enum SfscError {
  NO_ERROR = 0;
  TIMEOUT = 1;
  MALFORMED = 2;
}
